--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   undo: ^1.5.0
   font_awesome_flutter: ^10.8.0
   url_launcher: ^6.3.1
+  bootstrap_icons: ^1.11.3
 
 dev_dependencies:
   flutter_test:
