--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,7 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-/build/**
-!/build/app/outputs/flutter-apk/**
+/build/
 
 # Symbolication related
 app.*.symbols
